--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <li><a href="./module-6.html">MODULE 6</a></li>
       <li><a href="./module-7.html">MODULE 7</a></li>
       <li><a href="./module-8.html">MODULE 8</a></li>
+      <li><a href="./module-9.html">MODULE 9</a></li>
     </ul>
   </body>
 </html>
