--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <li><a href="./module-7.html">MODULE 7</a></li>
       <li><a href="./module-8.html">MODULE 8</a></li>
       <li><a href="./module-9.html">MODULE 9</a></li>
+      <li><a href="./module-10.html">MODULE 10</a></li>
     </ul>
   </body>
 </html>
