--- a/module-10.html
+++ b/module-10.html
@@ -7,6 +7,8 @@
     <title>Module-10</title>
   </head>
   <body>
-        <script src="./js/module-10.js"></script>
+    <button class="btn js-start">Start</button>
+    <button class="btn js-stop">Stop</button>
+    <script src="./js/module-10.js"></script>
   </body>
 </html>
