--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -19,6 +19,8 @@
       <li><a href="./module-8.html">MODULE 8</a></li>
       <li><a href="./module-9.html">MODULE 9</a></li>
       <li><a href="./module-10.html">MODULE 10</a></li>
+      <li><a href="./module-11.html">MODULE 11</a></li>
+      <li><a href="./module-11-axios.html">MODULE 11-axios</a></li>
     </ul>
   </body>
 </html>
