lesson 21 Mod11 Dmytro K

--- a/module-11.html
+++ b/module-11.html
@@ -7,6 +7,32 @@
     <title>Module-11</title>
   </head>
   <body>
-    <script src="./js/module-11.js"></script>
+    <ul class="todo-list"></ul>
+    <!-- <form action="submit" class="js-search-form search-form">
+      <div class="form-group">
+        <label for="city" class="label">Введіть назву міста:</label>
+        <input
+          type="text"
+          name="city"
+          class="search-input"
+          autocomplete="off"
+          required
+        />
+      </div>
+      <div class="form-group">
+        <label for="days" class="label">Виберіть кількість днів:</label>
+        <div class="input-group">
+          <select name="days" class="days-select">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+          </select>
+          <button class="search-button">Пошук</button>
+        </div>
+      </div>
+    </form>
+    <ul class="js-list weather-cards"></ul> -->
+
+    <script type="module" src="./js/module-11.js"></script>
   </body>
 </html>
