--- a/module-11-axios.html
+++ b/module-11-axios.html
@@ -7,6 +7,108 @@
     <title>Module-11-axios</title>
   </head>
   <body>
-    <script src="./js/module-11-axios.js"></script>
+    <h1>Module-11-axios</h1>
+    <h2>Бібліотека AXIOS</h2>
+    <ul>
+      <li>
+        <p>
+          "запит (axios({ method: 'get', url:
+          'https://jsonplaceholder.typicode.com/users'}) .then(response =>
+          console.log(response)) .catch(error => console.log(error));) ;
+        </p>
+      </li>
+      <li><p>повертає об'єкт відповіді що містить наступну інформацію</p></li>
+      <li><p class="obj">data: {}, // Відповідь від сервера</p></li>
+      <li><p class="obj">status: 200, // Код стану HTTP</p></li>
+      <li><p class="obj">statusText: "OK", // Текстовий опис статусу</p></li>
+      <li><p class="obj">headers: {}, // Заголовки відповідіqwxqXQ</p></li>
+      <li><p class="obj">config: {}, // Конфігурація запиту</p></li>
+    </ul>
+    <h2>Конфігурація за замовчуванням</h2>
+    <ul>
+      <li>
+        <p>
+          Якщо у тебе є кілька запитів до одного сервера, доводиться щоразу
+          повторювати базову адресу (https://jsonplaceholder.typicode.com), що
+          робить код менш зручним:
+        </p>
+      </li>
+      <li>
+        <p>
+          axios.get("https://jsonplaceholder.typicode.com/users").then().catch();
+        </p>
+      </li>
+      <li>
+        <p>
+          axios.get("https://jsonplaceholder.typicode.com/posts").then().catch();
+        </p>
+      </li>
+      <li>
+        <p>
+          axios.get("https://jsonplaceholder.typicode.com/images").then().catch();
+        </p>
+      </li>
+      <li>
+        <p>
+          =============================================================================
+        </p>
+      </li>
+      <li>
+        <p>
+          Можна вказати стандартні налаштування конфігурації у властивості
+          axios.defaults, які будуть застосовані до всіх запитів. Властивість
+          axios.defaults.baseURL відповідає за збереження базової адреси для
+          всіх HTTP-запитів.
+        </p>
+      </li>
+      <li>
+        <p>import axios from "axios";</p>
+      </li>
+      <li>
+        <p>axios.defaults.baseURL = 'https://jsonplaceholder.typicode.com';</p>
+      </li>
+    </ul>
+    <h2>Заголовки за замовчуванням</h2>
+    <ul>
+      <li>
+        <p>
+          Окрім базової адреси, можна також встановити стандартні заголовки для
+          всіх HTTP-запитів. Це корисно, якщо, наприклад, потрібно передавати
+          API-ключ або інші авторизаційні дані в кожному запиті.
+        </p>
+      </li>
+      <li>
+        <p>
+          Використовуємо axios.defaults.headers.common для встановлення
+          заголовків, які будуть застосовуватися до всіх запитів:
+        </p>
+      </li>
+      <li>
+        <p>const myApiKey = "secret-api-key-for-every-request";</p>
+      </li>
+      <li>
+        <p>axios.defaults.headers.common["header-name"] = myApiKey;</p>
+      </li>
+      <li>
+        <p></p>
+      </li>
+      <li>
+        <p></p>
+      </li>
+      <li>
+        <p></p>
+      </li>
+      <li>
+        <p></p>
+      </li>
+      <li>
+        <p></p>
+      </li>
+      <li>
+        <p></p>
+      </li>
+    </ul>
+
+    <script type="module" src="./js/module-11-axios.js"></script>
   </body>
 </html>
