--- a/module-11.html
+++ b/module-11.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <ul class="todo-list"></ul>
-    <!-- <form action="submit" class="js-search-form search-form">
+    <ul class="user-list"></ul>
+    <ul class="list"></ul>
+
+    <form action="submit" class="js-search-form search-form">
       <div class="form-group">
         <label for="city" class="label">Введіть назву міста:</label>
         <input
@@ -31,7 +34,7 @@
         </div>
       </div>
     </form>
-    <ul class="js-list weather-cards"></ul> -->
+    <ul class="js-list weather-cards"></ul>
 
     <script type="module" src="./js/module-11.js"></script>
   </body>
