--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <li><a href="./module-10.html">MODULE 10</a></li>
       <li><a href="./module-11.html">MODULE 11+DK_forecast form</a></li>
       <li><a href="./module-11-axios.html">MODULE 11-axios</a></li>
+      <li><a href="./module-12.html">MODULE 12</a></li>
     </ul>
   </body>
 </html>
