--- a/module-10.html
+++ b/module-10.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,6 +7,8 @@
     <title>Module-10</title>
   </head>
   <body>
+    <button type="button" class="btn js-set">Set timeout</button>
+    <button type="button" class="btn js-clear">Clear timeout</button>
     <button class="btn js-start">Start</button>
     <button class="btn js-stop">Stop</button>
     <script src="./js/module-10.js"></script>
