--- a/module-11.html
+++ b/module-11.html
@@ -36,6 +36,9 @@
     </form>
     <ul class="js-list weather-cards"></ul>
 
+    <button type="button" class="btn">Fetch users</button>
+    <ul class="user-list1"></ul>
+
     <script type="module" src="./js/module-11.js"></script>
   </body>
 </html>
