--- a/module-11.html
+++ b/module-11.html
@@ -39,6 +39,8 @@
     <button type="button" class="btn">Fetch users</button>
     <ul class="user-list1"></ul>
 
+    <div id="photo-list"></div>
+
     <script type="module" src="./js/module-11.js"></script>
   </body>
 </html>
