--- a/module-11-axios.html
+++ b/module-11-axios.html
@@ -11,7 +11,7 @@
     <ul class="todo-list"></ul>
     <ul class="user-list"></ul>
     <ul class="list"></ul>
-    <!-- <h2>Бібліотека AXIOS</h2>
+    <h2>Бібліотека AXIOS</h2>
     <ul>
       <li>
         <p>
@@ -110,7 +110,7 @@
       <li>
         <p></p>
       </li>
-    </ul> -->
+    </ul>
 
     <script type="module" src="./js/module-11-axios.js"></script>
   </body>
